@@ -1,5 +1,17 @@
 2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm-val.c (common_int_types): New variable.
+	(pvm_make_integral_type_1): New function.
+	(pvm_make_integral_type): Rewrite to cache integral types.
+	(pvm_val_initialize): Initialize common integral types and
+	register GC roots for them.
+	(pvm_val_finalize): De-register GC roots for common integral
+	types.
+	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize not
+	pvm_val_initialize!
+
+2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize instead of
 	pvm_val_initialize.
 
